@@ -1,10 +1,22 @@
 
-# Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
-# Click nbfs://nbhost/SystemFileSystem/Templates/Other/Dockerfile to edit this template
+FROM eclipse-temurin:17 as jre-build
 
-FROM  openjdk:17
-VOLUME /tmp
-ADD target/externalapi.jar app.jar
-expose 9090
-RUN sh -c 'touch /app.jar'
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+         --add-modules jdk.unsupported,java.base,java.sql,java.naming,java.desktop,java.management,java.security.jgss,java.instrument \
+         --strip-debug \
+         --no-man-pages \
+         --no-header-files \
+         --compress=2 \
+         --output /javaruntime
+
+# Define your base image
+FROM debian:stretch-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+expose 8084
+COPY --from=jre-build /javaruntime $JAVA_HOME
+
+RUN mkdir /opt/app
+COPY target/*.jar /opt/app/app.jar
+CMD ["java", "-jar", "/opt/app/app.jar"]
